--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:theme="@style/Theme.Kotlin_bill"
         tools:targetApi="31">
         <activity
-            android:name=".activities.CardDetailsActivity"
+            android:name=".activities.FoodDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.CardFetchingActivity"
+            android:name=".activities.FoodFetchingActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.CardInsertionActivity"
+            android:name=".activities.FoodInsertionActivity"
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
